<resources>
    <string name="app_name">Animations</string>
    <string name="btn_label">Animate</string>
    <string name="radio_rotate_fade_out">Rotate and fade out</string>
    <string name="radio_rotate_fade_in">Rotate and fade in</string>
    <string name="radio_bounce_anim">Bounce</string>
    <string name="radio_bounce_right_left">Bounce Right to Left</string>
    <string name="radio_fade_in_from_right">Fade in from right</string>
    <string name="radio_fade_in">Fade in</string>
    <string name="scale_from_huge">Scale from huge</string>
    <string name="scale_from_small">Scale from small</string>
    <string name="show_lottie">Show Lottie fingerprint</string>
    <string name="default_duration">500</string>
    <string name="duration_label">Duration (milis): </string>
    <string name="duration_hint">Duration in miliseconds</string>
    <string name="go_dark">Go Dark</string>
    <string name="go_light">Go Light</string>

</resources>
