<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Label to animate-->
    <TextView
        android:id="@+id/label_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:background="@color/colorLight"
        android:padding="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <!--Animate button-->
    <Button
        android:id="@+id/button_animate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_label"
        app:layout_constraintBottom_toTopOf="@id/layout_duration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <!--Horizontal layout for duration-->
    <LinearLayout
        android:id="@+id/layout_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/group_radios"
        android:gravity="center_horizontal">

        <!--duration label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_label"/>

        <!--duration-->
        <EditText
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="@string/duration_hint"
            android:hint="@string/duration_hint"
            android:text="@string/default_duration"/>
    </LinearLayout>


    <!--Radio button group-->
    <RadioGroup
        android:id="@+id/group_radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <!--Rotate and fade out-->
        <RadioButton
            android:id="@+id/radio_rotate_fade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_rotate_fade_out"
            android:checked="true"
            />

        <!--Rotate and fade in-->
        <RadioButton
            android:id="@+id/radio_rotate_fade_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_rotate_fade_in"
            android:checked="true"
            />

        <!--Bounce-->
        <RadioButton
            android:id="@+id/radio_bounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_bounce_anim"/>

        <!--Bounce right to left-->
        <RadioButton
            android:id="@+id/radio_bounce_right_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_bounce_right_left"/>

        <!--Fade in from right-->
        <RadioButton
            android:id="@+id/radio_fade_in_from_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_fade_in_from_right"/>

        <!--Fade in-->
        <RadioButton
            android:id="@+id/radio_fade_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_fade_in"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>